applications/auth/postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-db
spec:
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  selector:
    app.kubernetes.io/name: auth-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-db
spec:
  serviceName: auth-db
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: auth-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: auth-db
    spec:
      containers:
        - name: postgresql
          image: docker.io/library/postgres:18.3-trixie
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U keycloak -d keycloak
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U keycloak -d keycloak
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
