applications/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: management
      port: 9000
      targetPort: management
  selector:
    app.kubernetes.io/name: auth
